# immichctl

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  immich-openapi-specs.json  immich.rest  renovate.json
.claude/skills/update-immich-api/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  immichctl.rs  main.rs  selection.rs  timedelta.rs
src/immichctl/: album_cmd.rs  asset_cmd.rs  assets.rs  config.rs  curl_cmd.rs  download_cmd.rs  selection.rs  selection_cmd.rs  server_cmd.rs  tag_cmd.rs
tests/: cli.rs
