[package]
name = "immichctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
regress = "0.10.5"
anyhow = "1.0.100"

[build-dependencies]
prettyplease = "0.2.22"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1.0.145"
syn = "2.0"
openapiv3 = "2.2.0"

[dev-dependencies]
assert_cmd = "2.1.1"
mockito = "1.7.1"
predicates = "3.1.3"
rand = "0.9.2"
tempfile = "3.23.0"
dotenvy = "0.15"
